# Book-TDD-Web-Dev-Python

./: !README_BEFORE_BUILDING  !README_FOR_PRODUCTION.txt  !README_FOR_REPRINTS  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  Dockerfile  ER_sampleTOC.html  LICENSE.md  Makefile  README  README.md  Vagrantfile  acknowledgments.asciidoc  ai_preface.asciidoc  analytics.html  appendix_CD.asciidoc  appendix_DjangoRestFramework.asciidoc  appendix_Django_Class-Based_Views.asciidoc  appendix_III_provisioning_with_ansible.asciidoc  appendix_II_Django_Class-Based_Views.asciidoc  appendix_IV_testing_migrations.asciidoc  appendix_IV_what_to_do_next.asciidoc  appendix_IX_cheat_sheet.asciidoc  appendix_I_PythonAnywhere.asciidoc  appendix_VIII_DjangoRestFramework.asciidoc  appendix_VII_DjangoRestFramework.asciidoc  appendix_VII_rest_api_frontend.asciidoc  appendix_VI_cheat_sheet.asciidoc  appendix_VI_rest_api.asciidoc  appendix_VI_rest_api_backend.asciidoc  appendix_V_bdd_tools.asciidoc  appendix_V_testing_migrations.asciidoc  appendix_V_what_to_do_next.asciidoc  appendix_X_what_to_do_next.asciidoc  appendix_bdd.asciidoc  appendix_bdd_tools.asciidoc  appendix_fts_for_external_dependencies.asciidoc  appendix_github_links.asciidoc  (+175 more)
book0/: chapter_1.asciidoc  chapter_2.asciidoc  chapter_3.asciidoc  introduction.asciidoc  rome.py  tests.py
book1/: chapter_1.asciidoc  chapter_2.asciidoc  tests.py
docs/: ORM_style_guide.htm  ORM_style_guide.html  asciidoc-cheatsheet.html  asciidoc-userguide.html
introduction/: introduction.asciidoc
misc/: bibliography.asciidoc  curl  (+11 more)
(+198 files in other folders)
