[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-book"
version = "0"

# most requts are deliberately unpinned so we stay up to date with deps,
# and CI will warn when things change.
dependencies = [
    "requests",
    "lxml",
    "lxml-stubs",
    "cssselect",
    "django<6",
    "django-types",
    "pygments",
    "docopt",
    "requests",
    "selenium<5",
    "pytest",
    # "pytest-xdist",
    "ruff",
    "black",  # needed as a marker to tell django to use black
    "whitenoise", # from chap 10 on
]

[tool.setuptools]
packages = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
    "E741",  # single-letter variable
    "E731",  # allow lambdas
    "PLR2004",  # magic values
]

[tool.pyright]
# these help pyright in neovide to find its way around
venvPath = "."
venv = ".venv"
# most of the source for the book itself is untyped
typeCheckingMode = "standard"

[tool.pytest.ini_options]
# -r N disables the post-test summary
addopts = ["--tb=short", "-r N", "--color=yes"]

